@@ -243,4 +243,5 @@ Fixes:
     * Evas: fix gif decoding bug related with background color.
     * Evas: fix gif bug related with scale down decode.
     * Evas textblock: Fixed a bug with deletion of ranges that end just a visual format.
+    * Evas: If an object goes to be hidden without replacing the cur/prev state info, the object context can be corrupted at the next show time. Now it replaces the cur/prev in that rare case.
 
